# BitBox_v2_workshop

./: Dockerfile  README.md  before_docker_build.sh  fedora_install.sh
firmware/: .gitignore  CMakeLists.txt  README.md
firmware/py/: send_command.py
firmware/src/: CMakeLists.txt  commander.c  commander.h  main.c  random.c  random.h  screen.c  screen.h  sd.c  sd.h  util.c  util.h  version.h
firmware/src/demos/: demo_animation.c  demo_crypto.c  demo_detect_touch.c  demo_hello_world.c  demo_list.h  demo_mini_pong.c  demo_sd.c  demo_sign.c
firmware/src/drivers/: driver_init.c  driver_init.h
firmware/src/drivers/CMSIS/5.0.1/Core/Template/ARMv8-M/: main_s.c  tz_context.c
firmware/src/drivers/CMSIS/5.0.1/Include/: core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm7.h  core_sc000.h  core_sc300.h
firmware/src/drivers/Config/: usbd_config.h
firmware/src/drivers/SAMD51_DFP/1.0.70/gcc/gcc/: startup_samd51.c
firmware/src/drivers/SAMD51_DFP/1.0.70/include/: samd51g18a.h  samd51g19a.h  samd51j18a.h  samd51j19a.h  samd51n19a.h  samd51n20a.h  samd51p19a.h  samd51p20a.h
firmware/src/drivers/SAMD51_DFP/1.0.70/include/pio/: samd51g18a.h  samd51g19a.h  samd51j18a.h  samd51j19a.h  samd51n19a.h  samd51n20a.h  samd51p19a.h  samd51p20a.h
firmware/src/drivers/SAMD51_DFP/1.0.70/templates/: library.c  main.c
firmware/src/drivers/ff13a/src/: ff.c
firmware/src/drivers/hal/src/: hal_usart_async.c
firmware/src/drivers/hpl/aes/: hpl_aes.c
firmware/src/drivers/hpl/icm/: hpl_icm.c
firmware/src/drivers/hpl/sdhc/: hpl_sdhc.c
firmware/src/drivers/hpl/sercom/: hpl_sercom.c
firmware/src/drivers/hpl/usb/: hpl_usb.c
firmware/src/drivers/oled/: ssd1306.c  ssd1306.h
firmware/src/drivers/qtouch/: qtouch.c  qtouch.h
firmware/src/drivers/qtouch/datastreamer/: 03EB00000000000000AA5501.db  03EB00000000000000AA5501.ds  03EB00000000000000AA5501.sc  datastreamer.h  datastreamer_UART_sam.c
firmware/src/drivers/qtouch/include/: qtm_acq_same54_0x000f_api.h  qtm_binding_layer_0x0005_api.h  qtm_common_components_api.h  qtm_scroller_0x000b_api.h  qtm_touch_key_0x0002_api.h  touch_api_ptc.h
firmware/src/drivers/sd_mmc/: sd_mmc.c
firmware/src/drivers/usb/class/hid/: usb_protocol_hid.h
firmware/src/drivers/usb/class/hid/device/: hiddf_generic.c  hiddf_generic_desc.h
firmware/src/drivers/usb/device/: usbdc.c
firmware/src/ugui/: ugui.c  ugui.h
firmware/src/ugui/fonts/: font_a_11X12.c  font_a_11X12.h  font_a_15X16.c  font_a_15X16.h  font_a_17X18.c  font_a_17X18.h  font_a_21X22.c  font_a_21X22.h  font_a_9X9.c  font_a_9X9.h  font_ab_10X10.c  font_ab_10X10.h  font_ab_13X13.c  font_ab_13X13.h  font_ab_15X17.c  font_ab_15X17.h  font_ab_17X18.c  font_ab_17X18.h  font_ab_21X22.c  font_ab_21X22.h
firmware/src/usb/: usb.c  usb.h  usb_apdu.c  usb_apdu.h
